graphql do post criado

--- a/blog-subsi/posts/2020-02-15-about.md
+++ b/blog-subsi/posts/2020-02-15-about.md
@@ -2,7 +2,7 @@
 date: 2020-02-15 18:00
 title: Lorem 
 description: Ipsum dolor sit amet, consectetur adipiscing elit. 
-category: about
+category: diário
 background: "lightgreen"
 ---
 
