pasta static/assets, plugin imagens para posts e component post pronto

--- a/blog-subsi/posts/2020-01-17-diario-01.md
+++ b/blog-subsi/posts/2020-01-17-diario-01.md
@@ -7,6 +7,8 @@ background: "orange"
 ---
 
 
+![alua](/assets/img/moon2.jpg)
+
   -- “oi cicero cheguei” 
 
 Trespassei o portão automático do Edifício Norcon e me disparei em direção ao carro do rapaz mais parecido com a foto que tinha visto no dia anterior. Ele me reconheceu e acenou pra mim. Entramos no carro. Davam oito e dez da manhã, e eu tinha exatamente 5 horas para ir e voltar de Palmares a tempo das aulas de Inglês à tarde. De acordo com o Google, Palmares fica na metade do caminho para Recife, a uns 170 km de distância de Maceió. E é lá onde fica o polo regional da Universidade de Pernambuco, onde todos os aprovados no vestibular farão a matrícula, e para onde todos irão quando tiverem de fazer provas e tudo aquilo que se faz em um polo regional. Fazia muitíssimo calor e era aquela sexta-feira o último dia de matrícula. Se o nosso amigo pisasse fundo, talvez conseguiríamos chegar às dez e pouco e fazer a matrícula a tempo suficiente de pegar a van de volta às 11h. Mas nada pode ser tão fácil. 
