--- a/blog-subsi/posts/2020-01-17-diario-01.md
+++ b/blog-subsi/posts/2020-01-17-diario-01.md
@@ -15,11 +15,11 @@ Trespassei o portão automático do Edifício Norcon e me disparei em direção 
 
 -- Mestre, só vou ter que passar lá em cima pra pegar uma menina...o foda é que é uma ex-namorada de um amigo meu...
 
-Não entendi o porquê daquele detalhe, mas estava com pressa e meio letárgico por uma noite mal dormida. -- Ah não, tranquilo. -- paguei-lhe a importância de trinta reais, pluguei o fone no meu ouvido esquerdo e voltei a ouvir nosso velho Olavão. Passado um minuto, outro passageiro entra no carro, um rapaz jovem e forte que ia para Recife e trazia um terno numa embalagem. 
+Não entendi o porquê daquele detalhe, mas estava com pressa e meio letárgico por uma noite mal dormida. -- Ah não, tranquilo. -- paguei-lhe a importância de trinta reais. Passado um minuto, outro passageiro entra no carro, um rapaz jovem e forte que ia para Recife e trazia um terno numa embalagem. 
 
 -- Opa! bom dia… -- partimos.
 
-O terceiro passageiro foi recolhido num posto de gasolina na avenida Fernandes Lima. Dessa vez, tratava-se um cara de uns trinta anos, forte mas não malhado de academia. Não arriscaria adivinhar sua profissão nem o motivo da viagem. Só sei que agora eu estava ali, esmagado entre dois adultos mais bombados do que eu. Enfiei minhas pernas no vão entre os bancos dianteiros. Enquanto isso, mais Olavo...discutindo, dessa vez, os documentos falsos do Obama. E assim entramos no bairro Serraria. 
+O terceiro passageiro foi recolhido num posto de gasolina na avenida Fernandes Lima. Dessa vez, tratava-se um cara de uns trinta anos, forte mas não malhado de academia. Não arriscaria adivinhar sua profissão nem o motivo da viagem. Só sei que agora eu estava ali, esmagado entre dois adultos mais bombados do que eu. Enfiei minhas pernas no vão entre os bancos dianteiros. E assim entramos no bairro Serraria. 
 A tal ex-namorada do amigo do motorista acabou nos dando um pequeno chá-de-cadeira em frente ao condomínio onde morava, mas ninguém se importou, porque ela era realmente classuda, com luzes no cabelo, óculos escuros, e uma grande mala rosa. À medida em que ela sentou no banco da frente, o carro se impregnava com aquela leveza feminina, dei-lhe pelo retrovisor a cortesia de um alô; Seguimos. O motorista parecia mesmo interessado na menina, porque toda vez que ela falava alguma coisa, nosso amigo desviava o rosto da pista e a olhava fixamente, de um jeito não natural, feito um robô. 
 Mais adiante, talvez para transparecer um ar de caroneiro profissional, ou talvez só para impressionar a moça, o motorista nos aplicou sua playlist de sertanejo, o que me obrigou a aumentar o volume do Spotify.
 
