--- a/blog-subsi/posts/2020-02-07-diario03.md
+++ b/blog-subsi/posts/2020-02-07-diario03.md
@@ -1,5 +1,6 @@
 ---
 date: 2020-02-07 19:00
+img: 
 title: 07 DE FEVEREIRO
 description: Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
 category: diário
