--- a/blog-subsi/posts/2020-03-06-diario06.md
+++ b/blog-subsi/posts/2020-03-06-diario06.md
@@ -1,5 +1,6 @@
 ---
 date: 2020-03-06 19:00
+img: 
 title: 06 DE MARÇO
 description: Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
 category: diário
