--- a/blog-subsi/posts/2020-03-16-diario07.md
+++ b/blog-subsi/posts/2020-03-16-diario07.md
@@ -1,5 +1,6 @@
 ---
 date: 2020-03-16 19:00
+img: 
 title: 16 DE MARÇO
 description: Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
 category: diário
