--- a/blog-subsi/posts/2020-01-17-diario-01.md
+++ b/blog-subsi/posts/2020-01-17-diario-01.md
@@ -1,6 +1,6 @@
 ---
 date: 2020-03-17 18:00
-img: static/assets/img/moon2.jpg
+img: "static/assets/img/moon2.jpg"
 title: Lorem
 description: Ipsum dolor sit amet, consectetur adipiscing elit. 
 category: textos
