--- a/blog-subsi/posts/2020-01-20-diario02.md
+++ b/blog-subsi/posts/2020-01-20-diario02.md
@@ -1,6 +1,6 @@
 ---
 date: 2020-01-20 19:00
-img: 
+img: "static/assets/img/moon2.jpg"
 title: 20 DE JANEIRO
 description: Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
 category: diário
