--- a/blog-subsi/posts/2020-03-16-diario07.md
+++ b/blog-subsi/posts/2020-03-16-diario07.md
@@ -1,6 +1,6 @@
 ---
 date: 2020-03-16 19:00
-img: 
+img: "static/assets/img/moon2.jpg"
 title: 16 DE MARÇO
 description: Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
 category: diário
