erro na PostImg

--- a/blog-subsi/posts/2020-02-24-diario05.md
+++ b/blog-subsi/posts/2020-02-24-diario05.md
@@ -1,6 +1,6 @@
 ---
 date: 2020-02-24 19:00
-img: "static/assets/img/moon2.jpg"
+img: ./static/assets/images/moon2.jpg
 title: 24 DE FEVEREIRO
 description: Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
 category: diário
