layout post atualizado

--- a/blog-subsi/posts/2020-03-16-diario07.md
+++ b/blog-subsi/posts/2020-03-16-diario07.md
@@ -4,6 +4,7 @@ title: 16 DE MARÇO
 description: Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
 category: diário
 background: "orange"
+img: "/posts/static/assets/images/moon.png"
 ---
 
 Lorem Ipsum
