--- a/blog-subsi/posts/2020-01-20-diario02.md
+++ b/blog-subsi/posts/2020-01-20-diario02.md
@@ -4,6 +4,7 @@ title: 20 DE JANEIRO
 description: Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
 category: diário
 background: "orange"
+img: "/posts/static/assets/images/moon.png"
 ---
 
 
