--- a/blog-subsi/posts/2020-02-07-diario03.md
+++ b/blog-subsi/posts/2020-02-07-diario03.md
@@ -1,10 +1,10 @@
 ---
 date: 2020-02-07 19:00
-
 title: 07 DE FEVEREIRO
 description: Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-category: diário
+category: texto
 background: "orange"
+img: "/posts/static/assets/images/moon.png"
 ---
 
 Lorem Ipsum
