--- a/blog-subsi/posts/2020-02-16-diario04.md
+++ b/blog-subsi/posts/2020-02-16-diario04.md
@@ -1,10 +1,10 @@
 ---
 date: 2020-02-16 19:00
-
 title: 16 DE FEVEREIRO
 description: Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
 category: diário
 background: "orange"
+img: "/posts/static/assets/images/moon.png"
 ---
 
 
