Fix naming/formatting issues and make image available on posts

--- a/blog-subsi/posts/2020-02-24-diario05.md
+++ b/blog-subsi/posts/2020-02-24-diario05.md
@@ -2,13 +2,11 @@
 date: 2020-02-24 19:00
 
 title: 24 DE FEVEREIRO
-description: Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+description: Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 category: diário
 background: "orange"
-img: "/posts/static/assets/images/moon.png"
+image: ../src/images/alua.jpg
 ---
-
-
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin enim nibh, suscipit sed rhoncus quis, blandit quis sapien. Ut congue pharetra rhoncus. Praesent finibus vitae urna quis cursus. Proin mollis elementum sapien, vitae viverra magna tincidunt a. Nullam tincidunt interdum dui ut ultricies. Maecenas pellentesque tellus ac mauris faucibus elementum. Nulla quis risus aliquam, pharetra neque non, dapibus augue. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Cras ullamcorper lacinia augue in placerat. Suspendisse lacinia massa id blandit varius. Mauris ultricies ultricies bibendum.
 
