--- a/blog-subsi/posts/2020-01-20-diario02.md
+++ b/blog-subsi/posts/2020-01-20-diario02.md
@@ -1,12 +1,11 @@
 ---
 date: 2020-01-20 19:00
 title: 20 DE JANEIRO
-description: Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+description: Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 category: diário
 background: "orange"
-img: "/posts/static/assets/images/moon.png"
+image: ../src/images/alua.jpg
 ---
-
 
 Lorem Ipsum
 
