--- a/blog-subsi/posts/2020-03-16-diario07.md
+++ b/blog-subsi/posts/2020-03-16-diario07.md
@@ -1,10 +1,10 @@
 ---
 date: 2020-03-16 19:00
 title: 16 DE MARÇO
-description: Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+description: Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 category: diário
 background: "orange"
-img: "/posts/static/assets/images/moon.png"
+image: ../src/images/alua.jpg
 ---
 
 Lorem Ipsum
