--- a/blog-subsi/posts/2020-01-20-diario02.md
+++ b/blog-subsi/posts/2020-01-20-diario02.md
@@ -2,7 +2,7 @@
 date: 2020-01-20 19:00
 title: 20 DE JANEIRO
 description: Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-category: diário
+tags: diário
 background: "orange"
 image: ../src/images/alua.jpg
 ---
