--- a/blog-subsi/posts/2020-02-24-diario05.md
+++ b/blog-subsi/posts/2020-02-24-diario05.md
@@ -3,7 +3,7 @@ date: 2020-02-24 19:00
 
 title: 24 DE FEVEREIRO
 description: Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-category: diário
+tags: diário
 background: "orange"
 image: ../src/images/alua.jpg
 ---
