erro de component category corrigido falta o link

--- a/blog-subsi/posts/2020-02-07-diario03.md
+++ b/blog-subsi/posts/2020-02-07-diario03.md
@@ -2,7 +2,7 @@
 date: 2020-02-07 19:00
 title: 07 DE FEVEREIRO
 description: Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-tags: texto
+tags: ["diário"]
 background: "orange"
 image: ../src/images/alua.jpg
 ---
