--- a/blog-subsi/posts/2020-03-06-diario06.md
+++ b/blog-subsi/posts/2020-03-06-diario06.md
@@ -2,7 +2,7 @@
 date: 2020-03-06 19:00
 title: 06 DE MARÇO
 description: Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-tags: diário
+tags: ["diário"]
 background: "orange"
 image: ../src/images/alua.jpg
 ---
