erro no component search

--- a/blog-subsi/posts/2020-02-16-diario04.md
+++ b/blog-subsi/posts/2020-02-16-diario04.md
@@ -2,7 +2,7 @@
 date: 2020-02-16 19:00
 title: 16 DE FEVEREIRO
 description: Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-tags: ["diário"]
+tags: ["textto"]
 background: "orange"
 image: ../src/images/alua.jpg
 ---
