--- a/blog-subsi/posts/2020-03-16-diario07.md
+++ b/blog-subsi/posts/2020-03-16-diario07.md
@@ -2,7 +2,7 @@
 date: 2020-03-16 19:00
 title: 16 DE MARÇO
 description: Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-tags: ["diário"]
+tags: ["texto"]
 background: "orange"
 image: ../src/images/alua.jpg
 ---
